# bachelor-thesis

./: .gitignore  README.md  thesis
benchmarks/: a.out  bench_timings  benchmark_timings  config.py  filtered_sum_parse_perf_csv.py  matrix_sum_parse_perf_csv.py  normalized_plots.py  output_to_plot.py  plots.py  run.py  utils.py
benchmarks/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
benchmarks/mind_outputs/: compact_aos_vs_soa.out  matrix_sum.out  random_access_aos_vs_soa.out
benchmarks/mind_outputs_to_plot/: data_alignment.out  random_access_aos_vs_soa.out
benchmarks/outputs/: compact_aos_vs_soa.out  data_alignment.out  filtered_sum.out  random_access_aos_vs_soa.out
benchmarks/outputs_to_plot/: aos_vs_soa.out  compact_aos_vs_soa.out  data_alignment.out  parallel_count.out  random_access_aos_vs_soa.out
benchmarks/scripts/: plots.py
benchmarks/src/: CMakeLists.txt  measure.h
benchmarks/src/aos_vs_soa/: aos_vs_soa.cpp
benchmarks/src/compact_aos_vs_soa/: compact_aos_vs_soa.cpp
benchmarks/src/data_alignment/: data_alignment.cpp
benchmarks/src/filtered_sum/: filtered_sum.cpp
benchmarks/src/matrix_sum/: matrix_sum.cpp
benchmarks/src/parallel_count/: parallel_count.cpp
benchmarks/src/random_access_aos_vs_soa/: random_access_aos_vs_soa.cpp
data_alignment_examples/: struct_S.cpp  struct_S_good.cpp  struct_S_packed.cpp
draw.io/: cache_fetch.xml  matrix  virtual_memory_mapping
papers/: README.md
praca/: benchmarks.tex  bibliografia.bib  intro.tex  praca.bcf  praca.out  praca.tex  summary.tex  theory.tex
(+43 files in other folders)
